fix underline wrap bug

--- a/components/dashboard/Dashboard.module.scss
+++ b/components/dashboard/Dashboard.module.scss
@@ -12,7 +12,6 @@
     align-content: start;
 
     .title {
-      display: inline;
       @include underline;
       font-size: $font-h3;
       justify-self: start;
