--- a/styles/_Variables.scss
+++ b/styles/_Variables.scss
@@ -63,5 +63,6 @@ $border: 1px solid $black;
 $app-height: var(--app-height);
 
 @mixin underline {
+  display: inline;
   box-shadow: inset 0 -12px 0px 0px $green-light;
 }
